Day 3 of work, hoodie project

--- a/src/zue_core/test.html
+++ b/src/zue_core/test.html
@@ -4,8 +4,13 @@
     <title>Zue Core Tests</title>
     <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="core.js"></script>
-    <script type="text/javascript" src="bridge.js"></script>
+    <script type="text/javascript" src="tests/blanket.js"></script>
+    <script type="text/javascript" src="core.js" data-cover></script>
+    <script type="text/javascript" src="bridge.js" data-cover></script>
+    <script type="text/javascript" src="config.js" data-cover></script>
+    <script type="text/javascript" src="lights.js" data-cover></script>
+    <script type="text/javascript" src="groups.js" data-cover></script>
+    <script type="text/javascript" src="plugins/name_pgroup.js" data-cover></script>
     <link type="text/css" rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.12.0.css" />
 </head>
 <body>
