added modal when no bridge found. added hoodie cache for bridges.

--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,15 @@
             <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Close</button>
           </div>
         </div>
+        
+        <div id="no-bridge" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-header">
+            <h3 id="myModalLabel">No bridge found</h3>
+          </div>
+          <div class="modal-body">
+            <p>Please make sure your bridge is visible, or program this app to allow manual entry of bridge IP address.</p>
+          </div>
+        </div>
 
         <div class="hoodie-accountbar">
 
@@ -117,7 +126,7 @@
 
     <script src="assets/vendor/hoodie.accountbar.bootstrap.js"></script>
     <script src="assets/vendor/bootstrap.modalform.js"></script>
-    <script src="assets/js/zue.min.js"></script>
+    <script src="assets/js/zue.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
