UI can now link bridges. Removed bridge username. Added bridge element to hue error.

--- a/www/index.html
+++ b/www/index.html
@@ -98,8 +98,13 @@
       <div class="content">
         
         <!-- zue area -->
-        <input type="button" value="link" id="link-button" />
+        <div id="link-section" style="display:none">
+            <input type="button" value="link" id="link-button" />
+        </div>
+        <b>Lights &amp; Groups</b>
         <ul id="lights"></ul>
+        <b>Bridges</b>
+        <ul id="bridges"></ul>
         <input type="button" value="clear debug" onclick="$('#zue-debug').html('');" />
         <!-- /zue area -->
         
