--- a/www/index.html
+++ b/www/index.html
@@ -284,5 +284,9 @@
     <script src="assets/vendor/bootstrap.modalform.js"></script>
     <script src="assets/js/zue.js"></script>
     <script src="assets/js/main.js"></script>
+
+    <script>
+    
+    </script>
   </body>
 </html>
