Organizing things for deploy to gh pages

--- a/index.html
+++ b/index.html
@@ -278,12 +278,11 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <!--<script src="assets/vendor/prism/prism.js"></script>-->
     <!-- Load the dynamic version of hoodie.js that includes all the plugin code-->
-    <script src="/_api/_files/hoodie.js"></script>
 
     <script src="assets/vendor/hoodie.accountbar.bootstrap.js"></script>
     <script src="assets/vendor/bootstrap.modalform.js"></script>
-    <script src="assets/js/zue.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/zue.min.js"></script>
+    <script src="assets/js/main.min.js"></script>
 
     <script>
     
